# mpesakit

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  mypy.ini  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  chore.yml  community.yml  docs.yml  dx.yml  feature.yml  refactor.yml  support.yml  technical-debt.yml  test.yml
.github/workflow/: code-quality.yml
.github/workflows/: code-quality.yml  deploy-docs.yml  generate-pystubs.yml  publish.yml  tests.yml
deprecated/mpesa/: reverse_passcode.py
docs/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/docs/: account-balance.mdx  auth.mdx  b2c-account-top-up.mdx  b2c.mdx  business-buygoods.mdx  business-paybill.mdx  c2b.mdx  dynamic-qr.mdx  environment.md  example.mdx  getting-credentials.md  installation.md  intro.md  production.md  reversal.mdx  tax-remittance.mdx  transaction-status.mdx  webhooks-best-practices.mdx
mpesa_sdk/: client.py  errors.py  mpesa_client.py
mpesa_sdk/B2B_express_checkout/: B2B_express_checkout.py
mpesa_sdk/B2C/: B2C.py  __init__.py  schemas.py
mpesa_sdk/B2C_account_top_up/: B2C_account_top_up.py
mpesa_sdk/C2B/: C2B.py  __init__.py  schemas.py
mpesa_sdk/account_balance/: account_balance.py
mpesa_sdk/auth/: access_token.py  token_manager.py
mpesa_sdk/bill_manager/: __init__.py  bill_manager.py  schemas.py
mpesa_sdk/business_buy_goods/: business_buy_goods.py
mpesa_sdk/business_paybill/: business_paybill.py  schemas.py
mpesa_sdk/dynamic_qr_code/: dynamic_qr_code.py  schemas.py
mpesa_sdk/http_client/: __init__.py  mpesa_http_client.py
mpesa_sdk/mpesa_express/: __init__.py  schemas.py  stk_push.py
mpesa_sdk/mpesa_ratiba/: mpesa_ratiba.py  schemas.py
mpesa_sdk/reversal/: __init__.py  reversal.py  schemas.py
mpesa_sdk/services/: b2b.py  b2c.py  balance.py  bill.py  c2b.py  dynamic_qr.py  express.py  ratiba.py  reversal.py  tax.py  transaction.py
mpesa_sdk/tax_remittance/: __init__.py  schemas.py  tax_remittance.py
mpesa_sdk/transaction_status/: schemas.py  transaction_status.py
mpesa_sdk/utils/: ip_whitelist.py
mpesakit/: __init__.py
mpesakit/b2c_account_top_up/: schemas.py
mpesakit/business_paybill/: schemas.py
mpesakit/c2b/: schemas.py
mpesakit/http_client/: http_client.py  mpesa_async_http_client.py  mpesa_http_client.py
mpesakit/mpesa_express/: schemas.py
mpesakit/retry/: __init__.py  retry.py
mpesakit/security/: __init__.py  get_credential.py
mpesakit/services/: b2c.py  express.py  tax.py  transaction.py
stubs/mpesakit/: __init__.pyi  errors.pyi  mpesa_client.pyi
(+159 files in other folders)
